--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -84,7 +84,7 @@
 }
 
 .border-bottom {
-  border-bottom: #f1f2f4 1px solid;
+  border-bottom: #f1f2f4 1.5px solid;
   width: 100%;
 }
 
@@ -106,7 +106,6 @@
   padding: 10px 30px;
   font-size: 14px;
   font-family: Avenir, sans-serif;
-  margin-right: 25px;
 }
 
 .align-items {
@@ -158,7 +157,7 @@
 }
 
 .header-padding {
-  padding: 15px;
+  padding: 10px 0;
 }
 
 .navbar-padding {
@@ -185,8 +184,8 @@
   margin-top: 0;
 }
 
-.margin-left-25 {
-  margin-left: 25%;
+.margin-left-35 {
+  margin-left: 35%;
 }
 
 .margin-right-15 {
@@ -203,13 +202,13 @@
 
 .hero-image {
   max-width: 100%;
-  height: auto;
-  filter: brightness(80%);
+  height: 500px;
+  filter: brightness(70%);
   margin: 50px 0;
 }
 
 .hero-text {
-  top: 20%;
+  top: 17%;
   left: 5%;
 }
 
